added project blocks

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Rick Groot</title>
 </head>
+
 <body>
 
     <nav>
@@ -23,7 +27,8 @@
         <section>
             <h2>In het kort</h2>
             <p>
-                Mijn naam is Rick Groot, ik ben een innovatieve front-end developer en designer uit Nederland. Studerend aan de opleiding CMD op de Hva. Een clean, responsive design staat bij mij centraal.
+                Mijn naam is Rick Groot, ik ben een innovatieve front-end developer en designer uit Nederland. Studerend
+                aan de opleiding CMD op de Hva. Een clean, responsive design staat bij mij centraal.
             </p>
             <h2>Skills</h2>
             <div class="skills">
@@ -36,20 +41,41 @@
             </div>
         </section>
         <section>
-            <h2>Kijk naar wat projecten</h2>
+            <h2>Projecten</h2>
             <div class="projects">
                 <article>
-                    <h3>Naam</h3>
-                    <div class="tags">
-                        <p>Svelte</p>
-                        <p>Design</p>
+                    <div class="info">
+                        <h3>Naam</h3>
+                        <div class="tags">
+                            <p>Svelte</p>
+                            <p>Design</p>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="info">
+                        <h3>Naam</h3>
+                        <div class="tags">
+                            <p>Svelte</p>
+                            <p>Design</p>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="info">
+                        <h3>Naam</h3>
+                        <div class="tags">
+                            <p>Svelte</p>
+                            <p>Design</p>
+                        </div>
                     </div>
                 </article>
             </div>
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
