--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/home.css">
     <title>Rick Groot</title>
 </head>
 
 <body>
 
     <nav>
-        <a href=""></a>
+        <a href="pages/projects.html">Projecten</a>
         <a href=""></a>
         <a href=""></a>
     </nav>
@@ -40,9 +40,11 @@
                 <p>JS libraries</p>
             </div>
         </section>
+
         <section>
             <h2>Projecten</h2>
             <div class="projects">
+
                 <article>
                     <div class="info">
                         <h3>Naam</h3>
@@ -52,6 +54,7 @@
                         </div>
                     </div>
                 </article>
+
                 <article>
                     <div class="info">
                         <h3>Naam</h3>
@@ -61,6 +64,7 @@
                         </div>
                     </div>
                 </article>
+
                 <article>
                     <div class="info">
                         <h3>Naam</h3>
@@ -70,6 +74,11 @@
                         </div>
                     </div>
                 </article>
+
+                    <div class="more">
+                        <h3>Zie meer...</h3>
+                    </div>
+                
             </div>
         </section>
     </main>
