css cleanup and footer added

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../styles/var.css">
+    <link rel="stylesheet" href="../styles/navfooter.css">
     <link rel="stylesheet" href="../styles/project.css">
     <title>Rick Groot | Projecten</title>
 </head>
 <body>
     
     <nav>
-        <a href=""></a>
+        <a href="../index.html">home</a>
         <a href=""></a>
         <a href=""></a>
     </nav>
@@ -84,5 +86,14 @@
         </article>
 
     </main>
+
+    <footer>
+        <h4>Contact</h4>
+        <a href="mailto:RickGroot41@gmail.com" target="_blank">RickGroot41@gmail.com</a>
+        <a href="https://www.linkedin.com/in/rick-groot-469777193/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/rickgroot" target="_blank">GitHub</a>
+        <a href="https://read.cv/rg" target="_blank">Online CV</a>
+    </footer>
+    
 </body>
 </html>
