--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/var.css">
+    <link rel="stylesheet" href="styles/navfooter.css">
     <link rel="stylesheet" href="styles/home.css">
     <title>Rick Groot</title>
 </head>
@@ -83,7 +85,11 @@
         </section>
     </main>
     <footer>
-
+        <h4>Contact</h4>
+        <a href="mailto:RickGroot41@gmail.com" target="_blank">RickGroot41@gmail.com</a>
+        <a href="https://www.linkedin.com/in/rick-groot-469777193/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/rickgroot" target="_blank">GitHub</a>
+        <a href="https://read.cv/rg" target="_blank">Online CV</a>
     </footer>
 </body>
 
