--- a/index.html
+++ b/index.html
@@ -14,11 +14,39 @@
 
 <body>
 
-    <nav>
-        <a href="pages/projects.html">Projecten</a>
-        <a href=""></a>
-        <a href=""></a>
+    <nav id="nav">
+        <a href="index.html">
+            <img src="img/icons/home.png" alt="Home">
+            <p>Home</p>
+        </a>
+        <a href="pages/projects.html">
+            <img src="img/icons/projects.png" alt="Projecten">
+            <p>Projecten</p>
+        </a>
+        <a href="../projects.html">
+            <img src="img/icons/hobby.png" alt="Projecten">
+            <p>Hobbies</p>
+        </a>
+        <div>
+            <a href="mailto:RickGroot41@gmail.com" target="_blank">
+                <img src="img/icons/mail.png" alt="E-mail">
+                <!-- <p>E-Mail</p> -->
+            </a>
+            <a href="https://github.com/rickgroot" target="_blank">
+                <img src="img/icons/github.png" alt="Github">
+                <!-- <p>Github</p> -->
+            </a>
+            <a href="https://www.linkedin.com/in/rick-groot-469777193/" target="_blank">
+                <img src="img/icons/linkedin.png" alt="LinkedIn">
+                <!-- <p>LinkedIn</p> -->
+            </a>
+            <a href="https://read.cv/rg" target="_blank">
+                <img src="img/icons/cv.png" alt="CV">
+                <!-- <p>Online CV</p> -->
+            </a>
+        </div>
     </nav>
+    <button id="menubtn"><span></span></button>
 
     <header>
         <h1>Rick Groot</h1>
