--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,13 +11,42 @@
     <link rel="stylesheet" href="../styles/project.css">
     <title>Rick Groot | Projecten</title>
 </head>
+
 <body>
-    
-    <nav>
-        <a href="../index.html">home</a>
-        <a href=""></a>
-        <a href=""></a>
+
+    <nav id="nav">
+        <a href="../index.html">
+            <img src="../img/icons/home.png" alt="Home">
+            <p>Home</p>
+        </a>
+        <a href="projects.html">
+            <img src="../img/icons/projects.png" alt="Projecten">
+            <p>Projecten</p>
+        </a>
+        <a href="../projects.html">
+            <img src="../img/icons/hobby.png" alt="Projecten">
+            <p>Hobbies</p>
+        </a>
+        <div>
+            <a href="mailto:RickGroot41@gmail.com" target="_blank">
+                <img src="../img/icons/mail.png" alt="E-mail">
+                <!-- <p>E-Mail</p> -->
+            </a>
+            <a href="https://github.com/rickgroot" target="_blank">
+                <img src="../img/icons/github.png" alt="Github">
+                <!-- <p>Github</p> -->
+            </a>
+            <a href="https://www.linkedin.com/in/rick-groot-469777193/" target="_blank">
+                <img src="../img/icons/linkedin.png" alt="LinkedIn">
+                <!-- <p>LinkedIn</p> -->
+            </a>
+            <a href="https://read.cv/rg" target="_blank">
+                <img src="../img/icons/cv.png" alt="CV">
+                <!-- <p>Online CV</p> -->
+            </a>
+        </div>
     </nav>
+    <button id="menubtn"><span></span></button>
 
     <header>
         <h1>Projecten</h1>
@@ -24,66 +54,79 @@
     </header>
 
     <main>
+        <section>
+            <h2>Mijn projecten</h2>
+            <p>
+                De afgelopen jaren heb ik aan verschillende projecten gewerkt. De meeste van deze projecten zijn vanuit
+                een schoolopdracht gemaakt, maar er zitten ook een aantal projecten tussen waar ik zelf aan begonnen
+                ben. Deze projecten houden zich vooral bezig met Front-End development, maar bevatten ook andere
+                gebieden van het ontwerpproces.
+            </p>
+        </section>
 
-        <article>
-            <div class="info">
-                <h3>Naam</h3>
-                <div class="tags">
-                    <p>Svelte</p>
-                    <p>Design</p>
+        <section>
+            <a href="./project/discord.html">
+                <div class="info">
+                    <h3>Discord-Bot</h3>
+                    <div class="tags">
+                        <p>Discord.js</p>
+                        <p>Node.js</p>
+                        <p>Interaction</p>
+                        <p>UX</p>
+                    </div>
                 </div>
-            </div>
-        </article>
+            </a>
 
-        <article>
-            <div class="info">
-                <h3>Naam</h3>
-                <div class="tags">
-                    <p>Svelte</p>
-                    <p>Design</p>
+            <a href="">
+                <div class="info">
+                    <h3>Naam</h3>
+                    <div class="tags">
+                        <p>Svelte</p>
+                        <p>Design</p>
+                    </div>
                 </div>
-            </div>
-        </article>
+            </a>
 
-        <article>
-            <div class="info">
-                <h3>Naam</h3>
-                <div class="tags">
-                    <p>Svelte</p>
-                    <p>Design</p>
+            <a href="">
+                <div class="info">
+                    <h3>Naam</h3>
+                    <div class="tags">
+                        <p>Svelte</p>
+                        <p>Design</p>
+                    </div>
                 </div>
-            </div>
-        </article>
+            </a>
 
-        <article>
-            <div class="info">
-                <h3>Naam</h3>
-                <div class="tags">
-                    <p>Svelte</p>
-                    <p>Design</p>
+            <a href="">
+                <div class="info">
+                    <h3>Naam</h3>
+                    <div class="tags">
+                        <p>Svelte</p>
+                        <p>Design</p>
+                    </div>
                 </div>
-            </div>
-        </article>
+            </a>
 
-        <article>
-            <div class="info">
-                <h3>Naam</h3>
-                <div class="tags">
-                    <p>Svelte</p>
-                    <p>Design</p>
+            <a href="">
+                <div class="info">
+                    <h3>Naam</h3>
+                    <div class="tags">
+                        <p>Svelte</p>
+                        <p>Design</p>
+                    </div>
                 </div>
-            </div>
-        </article>
+            </a>
 
-        <article>
-            <div class="info">
-                <h3>Naam</h3>
-                <div class="tags">
-                    <p>Svelte</p>
-                    <p>Design</p>
+            <a href="">
+                <div class="info">
+                    <h3>Naam</h3>
+                    <div class="tags">
+                        <p>Svelte</p>
+                        <p>Design</p>
+                    </div>
                 </div>
-            </div>
-        </article>
+            </a>
+        </section>
 
     </main>
 
@@ -94,6 +137,8 @@
         <a href="https://github.com/rickgroot" target="_blank">GitHub</a>
         <a href="https://read.cv/rg" target="_blank">Online CV</a>
     </footer>
-    
+
+    <script src="../scripts/menu.js"></script>
 </body>
+
 </html>
