home page mobile update

--- a/pages/project/icov.html
+++ b/pages/project/icov.html
@@ -49,38 +49,50 @@
     <button id="menubtn"><span></span></button>
 
     <header>
-        <h1>Discord-Bot</h1>
+        <h1>iCOV</h1>
         <div class="tags">
-            <p>Discord.js</p>
-            <p>Node.js</p>
-            <p>Interaction</p>
-            <p>UX</p>
+            <p>Design</p>
+            <p>Prototype</p>
+            <p>Website</p>
         </div>
-        <img src="../../img/projects/foxy/head.jpg" alt="Projecten">
+        <img src="../../img/projects/icov/head.jpg" alt="Projecten">
     </header>
 
     <main>
         <section>
-            <h2>Over Foxy</h2>
+            <h2>Over iCOV</h2>
             <p>
-                Dit is Foxy, een bot gemaakt voor Discord, een app waarmee je kan communiceren met anderen. Foxy weet
-                veel feiten, en weet de mooiste en leukste plaatjes van het internet af te krijgen. Gemaakt met NodeJS
-                en DiscordJS.
+                <a href="https://icov.nl/" target="_blank">iCOV</a> staat voor infobox Crimineel en Onverklaarbaar
+                Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die
+                datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder
+                meer witwassen, belastingontduiking en fraude.
             </p>
         </section>
         <section>
-            <h2>Wat inhoudelijker</h2>
+            <h2>Redesign</h2>
             <p>
-                Deze bot staat online in mijn eigen kleine Discord server en wordt veel gebruikt. De bot maakt gebruik
-                van verschillende API’s, zo haalt het feiten op over katten en memes via de reddit API. Ook zijn er
-                moderator commands waarmee leden van de server een mute kunnen krijgen. Alle code van deze bot is open
-                source en te vinden op <a href="https://github.com/RickGroot/Discord-Bot" target="_blank">mijn GitHub</a>.
+                Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein
+                team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en
+                aansluiten bij de content en doelgroep. Het team bestond uit <a
+                    href="https://www.linkedin.com/in/merlijn-bergevoet-6075161a2/" target="_blank">Merlijn
+                    Bergevoet</a>, <a href="https://www.linkedin.com/in/fleur-van-son-7a930a184/" target="_blank">Fleur
+                    van Son</a>, <a href="https://www.linkedin.com/in/max-mulder/">Max Mulder</a>, en onze coach <a
+                    href="https://www.linkedin.com/in/tim-arisz-228085a4/">Tim Arisz</a>.
+            </p>
+        </section>
+        <section>
+            <h2>Handige links</h2>
+            <p>
+                Hier is een link naar <a href="https://mbergevoet.github.io/iCOV-redesign/index.html"
+                    target="_blank">ons prototype</a>. De website van <a href="https://icov.nl/"
+                    target="_blank">iCOV</a> is later vernieuwd met onze ontwerpen als basis. Code van de website is <a
+                    href="https://github.com/mbergevoet/iCOV-redesign" target="_blank">hier</a> te vinden.
             </p>
         </section>
         <section class="images">
-            <img src="../../img/projects/foxy/card1.jpg" alt="Foxy werkend in discord">
-            <img src="../../img/projects/foxy/card2.jpg" alt="Een aantal functionaliteiten">
-            <img src="../../img/projects/foxy/card3.jpg" alt="Help functie">
+            <img src="../../img/projects/icov/card1.jpg" alt="Podcast iCOV">
+            <img src="../../img/projects/icov/card2.jpg" alt="Artikel van iCOV">
+            <img src="../../img/projects/icov/card3.jpg" alt="Responsive design">
         </section>
     </main>
 
