--- a/pages/projects.html
+++ b/pages/projects.html
@@ -77,12 +77,13 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="./project/icov.html">
                 <div class="info">
-                    <h3>Naam</h3>
+                    <h3>Redesign iCOV</h3>
                     <div class="tags">
-                        <p>Svelte</p>
                         <p>Design</p>
+                        <p>Prototype</p>
+                        <p>Website</p>
                     </div>
                 </div>
             </a>
