added more content

--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
 
     <header>
         <h1>Rick Groot</h1>
-        <img src="https://source.unsplash.com/collection/98508412/" alt="Rick Groot">
+        <!-- <img src="./img/profile.jpg" alt="Rick Groot"> -->
     </header>
 
     <main>
         <section>
-            <h2>Hoi!</h2>
+            <h2>Welkom!</h2>
             <p class="intro">
-                Ik ben Rick Groot, een innovatieve front-end developer en designer uit Nederland. Studerend
-                aan de opleiding CMD op de HvA. Een clean, responsive design staat bij mij centraal.
+                Ik ben Rick Groot (<span id="age">19</span>), een innovatieve front-end developer & designer uit
+                Nederland. Ik ben studerend
+                aan de opleiding <a href="https://www.cmd-amsterdam.nl/">Communication & Multimedia Design (CMD)</a> op
+                de HvA. Een clean, responsive en toeghankelijk design staat bij mij centraal.
             </p>
             <h2>Skills & ervaringen</h2>
             <div class="skills">
@@ -93,7 +95,7 @@
                         </div>
                     </div>
                 </a>
-    
+
                 <a href="./pages/project/icov.html">
                     <div class="info">
                         <h3>Redesign iCOV</h3>
@@ -104,7 +106,7 @@
                         </div>
                     </div>
                 </a>
-    
+
                 <a href="">
                     <div class="info">
                         <h3>Naam</h3>
@@ -115,11 +117,12 @@
                     </div>
                 </a>
 
-                <a class="more" href="./pages/projects.html">
-                    <h3>Zie meer...</h3>
-                </a>
-
             </div>
+
+            <a class="more" href="./pages/projects.html">
+                <h3>Zie meer...</h3>
+            </a>
+
         </section>
     </main>
     <footer>
