added hobby page and fixed styling issues

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/var.css">
     <link rel="stylesheet" href="styles/navfooter.css">
     <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/cards.css">
     <title>Rick Groot</title>
 </head>
 
@@ -19,30 +20,26 @@
             <img src="img/icons/home.png" alt="Home">
             <p>Home</p>
         </a>
-        <a href="pages/projects.html">
+        <a href="./pages/projects.html">
             <img src="img/icons/projects.png" alt="Projecten">
             <p>Projecten</p>
         </a>
-        <a href="../projects.html">
+        <a href="./pages/hobbies.html">
             <img src="img/icons/hobby.png" alt="Projecten">
             <p>Hobbies</p>
         </a>
         <div>
             <a href="mailto:RickGroot41@gmail.com" target="_blank">
                 <img src="img/icons/mail.png" alt="E-mail">
-                <!-- <p>E-Mail</p> -->
             </a>
             <a href="https://github.com/rickgroot" target="_blank">
                 <img src="img/icons/github.png" alt="Github">
-                <!-- <p>Github</p> -->
             </a>
             <a href="https://www.linkedin.com/in/rick-groot-469777193/" target="_blank">
                 <img src="img/icons/linkedin.png" alt="LinkedIn">
-                <!-- <p>LinkedIn</p> -->
             </a>
             <a href="https://read.cv/rg" target="_blank">
                 <img src="img/icons/cv.png" alt="CV">
-                <!-- <p>Online CV</p> -->
             </a>
         </div>
     </nav>
@@ -50,16 +47,15 @@
 
     <header>
         <h1>Rick Groot</h1>
-        <!-- <img src="./img/profile.jpg" alt="Rick Groot"> -->
     </header>
 
     <main>
         <section>
             <h2>Welkom!</h2>
             <p class="intro">
-                Ik ben Rick Groot (<span id="age">19</span>), een innovatieve front-end developer & designer uit
+                Ik ben Rick Groot<span id="age"> (19)</span>, een innovatieve front-end developer & designer uit
                 Nederland. Ik ben studerend
-                aan de opleiding <a href="https://www.cmd-amsterdam.nl/">Communication & Multimedia Design (CMD)</a> op
+                aan de opleiding <a href="https://www.cmd-amsterdam.nl/" target="_blank">Communication & Multimedia Design (CMD)</a> op
                 de HvA. Een clean, responsive en toeghankelijk design staat bij mij centraal.
             </p>
             <h2>Skills & ervaringen</h2>
@@ -134,6 +130,7 @@
     </footer>
 
     <script src="./scripts/menu.js"></script>
+    <script src="./scripts/text.js"></script>
 </body>
 
 </html>
