--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/var.css">
     <link rel="stylesheet" href="../styles/navfooter.css">
     <link rel="stylesheet" href="../styles/project.css">
+    <link rel="stylesheet" href="../styles/cards.css">
     <title>Rick Groot | Projecten</title>
 </head>
 
@@ -19,30 +20,26 @@
             <img src="../img/icons/home.png" alt="Home">
             <p>Home</p>
         </a>
-        <a href="projects.html">
+        <a href="./projects.html">
             <img src="../img/icons/projects.png" alt="Projecten">
             <p>Projecten</p>
         </a>
-        <a href="../projects.html">
+        <a href="./hobbies.html">
             <img src="../img/icons/hobby.png" alt="Projecten">
             <p>Hobbies</p>
         </a>
         <div>
             <a href="mailto:RickGroot41@gmail.com" target="_blank">
                 <img src="../img/icons/mail.png" alt="E-mail">
-                <!-- <p>E-Mail</p> -->
             </a>
             <a href="https://github.com/rickgroot" target="_blank">
                 <img src="../img/icons/github.png" alt="Github">
-                <!-- <p>Github</p> -->
             </a>
             <a href="https://www.linkedin.com/in/rick-groot-469777193/" target="_blank">
                 <img src="../img/icons/linkedin.png" alt="LinkedIn">
-                <!-- <p>LinkedIn</p> -->
             </a>
             <a href="https://read.cv/rg" target="_blank">
                 <img src="../img/icons/cv.png" alt="CV">
-                <!-- <p>Online CV</p> -->
             </a>
         </div>
     </nav>
@@ -64,7 +61,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="projects">
             <a href="./project/discord.html">
                 <div class="info">
                     <h3>Discord-Bot</h3>
