--- a/pages/project/icov.html
+++ b/pages/project/icov.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../styles/var.css">
     <link rel="stylesheet" href="../../styles/navfooter.css">
     <link rel="stylesheet" href="../../styles/item.css">
-    <title>Rick Groot | Discord-bot</title>
+    <title>Rick Groot | iCOV</title>
 </head>
 
 <body>
@@ -23,26 +23,22 @@
             <img src="../../img/icons/projects.png" alt="Projecten">
             <p>Projecten</p>
         </a>
-        <a href="../projects.html">
+        <a href="../hobbies.html">
             <img src="../../img/icons/hobby.png" alt="Projecten">
             <p>Hobbies</p>
         </a>
         <div>
             <a href="mailto:RickGroot41@gmail.com" target="_blank">
                 <img src="../../img/icons/mail.png" alt="E-mail">
-                <!-- <p>E-Mail</p> -->
             </a>
             <a href="https://github.com/rickgroot" target="_blank">
                 <img src="../../img/icons/github.png" alt="Github">
-                <!-- <p>Github</p> -->
             </a>
             <a href="https://www.linkedin.com/in/rick-groot-469777193/" target="_blank">
                 <img src="../../img/icons/linkedin.png" alt="LinkedIn">
-                <!-- <p>LinkedIn</p> -->
             </a>
             <a href="https://read.cv/rg" target="_blank">
                 <img src="../../img/icons/cv.png" alt="CV">
-                <!-- <p>Online CV</p> -->
             </a>
         </div>
     </nav>
