--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -51,9 +51,9 @@
 
     <main>
         <article>
-            <h2>Mijn leven naast programmeren</h2>
+            <h2>Naast al het programmeren</h2>
             <P>Naast dat ik veel achter mijn laptop bezig met het maken van applicaties en websites doe ik ook nog
-                andere dingen in mijn vrije tijd. Zo speel ik trompet, en doe ik aan fotografie als hobby. </P>
+                andere dingen in mijn vrije tijd. Zo speel ik trompet, en doe ik aan fotografie als hobby.</P>
         </article>
         <section>
             <div></div>
@@ -64,7 +64,10 @@
         <article>
             <h2>Trompet</h2>
             <p>Al langer als 10 jaar speel ik nu trompet. Dit doe ik in meerdere orkesten en we maken ook vaak met het
-                orkest uitstapjes naar muziekconcoursen, zoals de RastederMusiktage in Duitsland.</p>
+                orkest uitstapjes naar muziekconcoursen, zoals de Rasteder Musiktage in Duitsland. Ik speel bij mijn
+                lokale fanfare, <a href="http://fanfareirene.nl/" target="_blank">Fanfare Irene</a>. Daarnaast speel ik
+                ook bij het <a href="https://www.nhjfo.nl/" target="_blank">Noord-Hollands Jeugd Fanfare Orkest
+                    (NHJFO)</a> en val ik vaak in bij andere muziekverenigingen.</p>
         </article>
         <section>
             <div></div>
