--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <p class="intro">
                 Ik ben Rick Groot<span id="age"> (19)</span>, een innovatieve front-end developer & designer uit
                 Nederland. Ik ben studerend
-                aan de opleiding <a href="https://www.cmd-amsterdam.nl/" target="_blank">Communication & Multimedia Design (CMD)</a> op
+                aan de opleiding <a href="https://www.cmd-amsterdam.nl/" target="_blank">Communication & Multimedia
+                    Design (CMD)</a> op
                 de HvA. Een clean, responsive en toeghankelijk design staat bij mij centraal.
             </p>
             <h2>Skills & ervaringen</h2>
@@ -103,12 +104,14 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="./pages/project/menu.html">
                     <div class="info">
-                        <h3>Naam</h3>
+                        <h3>CSS Menu</h3>
                         <div class="tags">
-                            <p>Svelte</p>
-                            <p>Design</p>
+                            <p>Pure CSS</p>
+                            <p>Responsive</p>
+                            <p>Styleguide</p>
+                            <p>Print Style</p>
                         </div>
                     </div>
                 </a>
