--- a/pages/project/discord.html
+++ b/pages/project/discord.html
@@ -57,7 +57,7 @@
 
     <main>
         <section>
-            <h2>Over Foxy</h2>
+            <h2>Over Foxy<span>| <a href="https://github.com/RickGroot/Discord-Bot" target="_blank">Code</a></span></h2>
             <p>
                 Dit is Foxy, een bot gemaakt voor Discord, een app waarmee je kan communiceren met anderen. Foxy weet
                 veel feiten, en weet de mooiste en leukste plaatjes van het internet af te krijgen. Gemaakt met NodeJS
