--- a/pages/project/icov.html
+++ b/pages/project/icov.html
@@ -56,7 +56,9 @@
 
     <main>
         <section>
-            <h2>Over iCOV</h2>
+            <h2>Over iCOV<span>| <a href="https://github.com/mbergevoet/iCOV-redesign" target="_blank">Code</a> | <a
+                        href="https://mbergevoet.github.io/iCOV-redesign/index.html" target="_blank">Live</a></span>
+            </h2>
             <p>
                 <a href="https://icov.nl/" target="_blank">iCOV</a> staat voor infobox Crimineel en Onverklaarbaar
                 Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die
@@ -73,16 +75,8 @@
                     href="https://www.linkedin.com/in/merlijn-bergevoet-6075161a2/" target="_blank">Merlijn
                     Bergevoet</a>, <a href="https://www.linkedin.com/in/fleur-van-son-7a930a184/" target="_blank">Fleur
                     van Son</a>, <a href="https://www.linkedin.com/in/max-mulder/">Max Mulder</a>, en onze coach <a
-                    href="https://www.linkedin.com/in/tim-arisz-228085a4/">Tim Arisz</a>.
-            </p>
-        </section>
-        <section>
-            <h2>Handige links</h2>
-            <p>
-                Hier is een link naar <a href="https://mbergevoet.github.io/iCOV-redesign/index.html"
-                    target="_blank">ons prototype</a>. De website van <a href="https://icov.nl/"
-                    target="_blank">iCOV</a> is later vernieuwd met onze ontwerpen als basis. Code van de website is <a
-                    href="https://github.com/mbergevoet/iCOV-redesign" target="_blank">hier</a> te vinden.
+                    href="https://www.linkedin.com/in/tim-arisz-228085a4/">Tim Arisz</a>. De website van <a
+                    href="https://icov.nl/" target="_blank">iCOV</a> is later vernieuwd met onze ontwerpen als basis.
             </p>
         </section>
         <section class="images">
