--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,7 +47,7 @@
 
     <header>
         <h1>Projecten</h1>
-        <img src="https://source.unsplash.com/collection/98508412/" alt="Projecten">
+        <img src="../img/projects/head.jpg" alt="Projecten">
     </header>
 
     <main>
@@ -85,12 +85,14 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="./project/menu.html">
                 <div class="info">
-                    <h3>Naam</h3>
+                    <h3>CSS Menu</h3>
                     <div class="tags">
-                        <p>Svelte</p>
-                        <p>Design</p>
+                        <p>Pure CSS</p>
+                        <p>Responsive</p>
+                        <p>Styleguide</p>
+                        <p>Print Style</p>
                     </div>
                 </div>
             </a>
