--- a/pages/projects.html
+++ b/pages/projects.html
@@ -97,12 +97,14 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="./project/pintreddit.html">
                 <div class="info">
-                    <h3>Naam</h3>
+                    <h3>Pintreddit</h3>
                     <div class="tags">
-                        <p>Svelte</p>
-                        <p>Design</p>
+                        <p>JavaScript</p>
+                        <p>API Data</p>
+                        <p>Web Application</p>
+                        <p>JSON</p>
                     </div>
                 </div>
             </a>
