added more projects and other content

--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -23,7 +23,7 @@
             <img src="../img/icons/projects.png" alt="Projecten">
             <p>Projecten</p>
         </a>
-        <a href="./projects.html">
+        <a href="./projects.html" class="active">
             <img src="../img/icons/hobby.png" alt="Projecten">
             <p>Hobbies</p>
         </a>
