--- a/pages/project/discord.html
+++ b/pages/project/discord.html
@@ -78,6 +78,9 @@
             <img src="../../img/projects/foxy/card2.jpg" alt="Een aantal functionaliteiten">
             <img src="../../img/projects/foxy/card3.jpg" alt="Help functie">
         </section>
+        <section>
+            <p>&laquo; <a href="../projects.html">Terug naar projecten</a></p>
+        </section>
     </main>
 
     <footer>
