--- a/pages/project/hummer.html
+++ b/pages/project/hummer.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../styles/var.css">
     <link rel="stylesheet" href="../../styles/navfooter.css">
     <link rel="stylesheet" href="../../styles/item.css">
-    <title>Rick Groot | CSS Menu</title>
+    <title>Rick Groot | Hummer</title>
 </head>
 
 <body>
@@ -45,50 +45,46 @@
     <button id="menubtn"><span></span></button>
 
     <header>
-        <h1>CSS Menu</h1>
+        <h1>Hummer</h1>
         <div class="tags">
-            <p>Pure CSS</p>
-            <p>Responsive</p>
-            <p>Styleguide</p>
-            <p>Print Style</p>
+            <p>Frontend application</p>
+            <p>Data</p>
+            <p>d3</p>
+            <p>Maps &amp; Graphs</p>
+            <p>React</p>
         </div>
-        <img src="../../img/projects/menu/head.jpg" alt="Projecten">
+        <img src="https://github.com/RickGroot/frontend-applications/blob/main/src/img/hummer.jpg?raw=true"
+            alt="Projecten">
     </header>
 
     <main>
         <section>
-            <h2>Pure CSS menu<span>| <a href="https://github.com/RickGroot/css-to-the-rescue-2021"
-                        target="_blank">Code</a> | <a
-                        href="https://rickgroot.github.io/css-to-the-rescue-2021/menu.html"
+            <h2>Over deze app<span>| <a href="https://github.com/RickGroot/frontend-applications"
+                        target="_blank">Code</a> | <a href="https://rickgroot.github.io/frontend-applications/"
                         target="_blank">Live</a></span></h2>
             <p>
-                Deze menukaart is gemaakt door middel van pure CSS, er wordt nergens gebruik gemaakt van JavaScript en
-                andere plugins. Doordat alles gemaakt is in CSS is het geen probleem wanneer de gebruiker geen
-                JavaScript aan heeft staan in de browser. De vorm en inhoud versterken elkaar door een sterke huisstijl,
-                waarbij alleen gebruik is gemaakt van 2 kleuren. Het prototype werkt het best op chromium browsers.
+                Parkeergarages zijn vaak niet heel hoog, maar prima te betreden. Maar hoe zit dat nou als je een grote
+                auto hebt? Waar kan je dan wel, en waar niet terecht om te parkeren? Deze applicatie is gemaakt om te
+                oefenen met data uit API’s, en om beter te worden met datavisualisaties. Door middel van simpele
+                datavisualisaties is het vaak makkelijker om problemen in te zien, of om dingen met elkaar te
+                vergelijken.
             </p>
         </section>
         <section>
-            <h2>Print stylesheet</h2>
+            <h2>React en d3</h2>
             <p>
-                Omdat dit een menukaart is zit er ook een print stylesheet ingebouwd. Wanneer de html pagina wordt
-                afgedrukt verschijnt er een mooi afgewerkte print, dat het restaurant goed kan gebruiken. De menukaart
-                kan dus makkelijk worden aangepast bij veranderingen en kan vervolgens meteen worden uitgeprint.
-            </p>
-        </section>
-        <section>
-            <h2>Andere bijzonderheden</h2>
-            <p>
-                Voor extra uitdaging is deze menukaart volledig responsive gemaakt. Het responsive design is gemaakt
-                zonder media queries. Ook maakt het hele project geen gebruik van classes in de HTML, alles is gestyled
-                door alternatieve CSS selectors. Ook ID’s zijn ontweken, behalve op de noodzakelijke plekken voor een
-                werkende navigatie. De navigatie is tevens ook met pure CSS in elkaar gezet.
+                Deze site is gemaakt door middel van React en d3. De pagina is opgesplitst in verschillende componenten,
+                die een geheel vormen in de browser. Door middel van d3 wordt er een map en barchart ingeladen. Daar
+                valt data op te zijn vanuit alle parkeergarages in Nederland, deze data komt uit een <a
+                    href="https://opendata.rdw.nl/browse?category=Parkeren&provenance=official" target="_blank">database
+                    van RDW</a>. De app geeft door de visualisaties interessante inzichten over de verdeling en ligging
+                van de hoogte van parkeergarages.
             </p>
         </section>
         <section class="images">
-            <img src="../../img/projects/menu/card1.jpg" alt="CSS navigatie">
-            <img src="../../img/projects/menu/card2.jpg" alt="Responsive design">
-            <img src="../../img/projects/menu/card3.jpg" alt="Print optie">
+            <img src="../../img/projects/hummer/card1.jpg" alt="Map van Nederland">
+            <img src="../../img/projects/hummer/card2.jpg" alt="Barchart">
+            <img src="../../img/projects/hummer/card3.jpg" alt="D3 en react">
         </section>
         <section>
             <p>&laquo; <a href="../projects.html">Terug naar projecten</a></p>
