--- a/pages/project/icov.html
+++ b/pages/project/icov.html
@@ -84,6 +84,9 @@
             <img src="../../img/projects/icov/card2.jpg" alt="Artikel van iCOV">
             <img src="../../img/projects/icov/card3.jpg" alt="Responsive design">
         </section>
+        <section>
+            <p>&laquo; <a href="../projects.html">Terug naar projecten</a></p>
+        </section>
     </main>
 
     <footer>
