--- a/pages/project/pintreddit.html
+++ b/pages/project/pintreddit.html
@@ -82,6 +82,9 @@
             <img src="../../img/projects/pintreddit/card2.jpg" alt="Actor diagram">
             <img src="../../img/projects/pintreddit/card3.jpg" alt="Filters">
         </section>
+        <section>
+            <p>&laquo; <a href="../projects.html">Terug naar projecten</a></p>
+        </section>
     </main>
 
     <footer>
