--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <nav id="nav">
-        <a href="index.html">
+        <a href="index.html" class="active">
             <img src="img/icons/home.png" alt="Home">
             <p>Home</p>
         </a>
@@ -52,7 +52,7 @@
     <main>
         <section>
             <h2>Welkom!</h2>
-            <p class="intro">
+            <p>
                 Ik ben Rick Groot<span id="age"> (19)</span>, een innovatieve front-end developer & designer uit
                 Nederland. Ik ben studerend
                 aan de opleiding <a href="https://www.cmd-amsterdam.nl/" target="_blank">Communication & Multimedia
@@ -75,6 +75,11 @@
                     <p>JS libraries</p>
                 </div>
             </div>
+            <h2>Code</h2>
+            <p>Met een goede kennis van HTML, CSS en JavaScript streef ik naar een semantisch correct en toegankelijk
+                internet. Code die ik schrijf ik bedoeld voor iedereen en voor elk device toegankelijk. Naast veel
+                Front-End kennis heb ik ook verstand van de rest van het ontwerpproces, en heb ik ook oog voor detail.
+                Daarnaast kan ik goed over vormgeving meedenken en verbeteringen bij een design inbrengen.</p>
         </section>
 
         <section>
