--- a/pages/project/portfolio.html
+++ b/pages/project/portfolio.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../styles/var.css">
     <link rel="stylesheet" href="../../styles/navfooter.css">
     <link rel="stylesheet" href="../../styles/item.css">
-    <title>Rick Groot | CSS Menu</title>
+    <title>Rick Groot | Portfolio</title>
 </head>
 
 <body>
@@ -45,50 +45,26 @@
     <button id="menubtn"><span></span></button>
 
     <header>
-        <h1>CSS Menu</h1>
+        <h1>Portfolio</h1>
         <div class="tags">
-            <p>Pure CSS</p>
+            <p>HTML & CSS</p>
             <p>Responsive</p>
-            <p>Styleguide</p>
-            <p>Print Style</p>
+            <p>Design</p>
         </div>
-        <img src="../../img/projects/menu/head.jpg" alt="Projecten">
+        <img src="../../img/profile2.jpg" alt="Projecten">
     </header>
 
     <main>
         <section>
-            <h2>Pure CSS menu<span>| <a href="https://github.com/RickGroot/css-to-the-rescue-2021"
-                        target="_blank">Code</a> | <a
-                        href="https://rickgroot.github.io/css-to-the-rescue-2021/menu.html"
-                        target="_blank">Live</a></span></h2>
+            <h2>In het kort<span>| <a href="https://github.com/RickGroot/Portfolio" target="_blank">Code</a></span>
+            </h2>
             <p>
-                Deze menukaart is gemaakt door middel van pure CSS, er wordt nergens gebruik gemaakt van JavaScript en
-                andere plugins. Doordat alles gemaakt is in CSS is het geen probleem wanneer de gebruiker geen
-                JavaScript aan heeft staan in de browser. De vorm en inhoud versterken elkaar door een sterke huisstijl,
-                waarbij alleen gebruik is gemaakt van 2 kleuren. Het prototype werkt het best op chromium browsers.
+                Het was al te verwachten, maar deze portfolio website is natuurlijk ook door mij in elkaar gezet. Ik het
+                bij plain HTML, CSS en JavaScript gehouden, omdat dit slechts een kleine site is. De HTML is semantisch
+                correct opgemaakt, de structuur is dus makkelijk en correct opgezet. Naast een mooie vormgeving is alles
+                ook helemaal responsive gemaakt. Verder valt er eigenlijk niet heel veel over te vertellen, bedankt voor
+                het bezoeken van mijn portfolio! &#128521;
             </p>
-        </section>
-        <section>
-            <h2>Print stylesheet</h2>
-            <p>
-                Omdat dit een menukaart is zit er ook een print stylesheet ingebouwd. Wanneer de html pagina wordt
-                afgedrukt verschijnt er een mooi afgewerkte print, dat het restaurant goed kan gebruiken. De menukaart
-                kan dus makkelijk worden aangepast bij veranderingen en kan vervolgens meteen worden uitgeprint.
-            </p>
-        </section>
-        <section>
-            <h2>Andere bijzonderheden</h2>
-            <p>
-                Voor extra uitdaging is deze menukaart volledig responsive gemaakt. Het responsive design is gemaakt
-                zonder media queries. Ook maakt het hele project geen gebruik van classes in de HTML, alles is gestyled
-                door alternatieve CSS selectors. Ook ID’s zijn ontweken, behalve op de noodzakelijke plekken voor een
-                werkende navigatie. De navigatie is tevens ook met pure CSS in elkaar gezet.
-            </p>
-        </section>
-        <section class="images">
-            <img src="../../img/projects/menu/card1.jpg" alt="CSS navigatie">
-            <img src="../../img/projects/menu/card2.jpg" alt="Responsive design">
-            <img src="../../img/projects/menu/card3.jpg" alt="Print optie">
         </section>
         <section>
             <p>&laquo; <a href="../projects.html">Terug naar projecten</a></p>
