--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,7 +20,7 @@
             <img src="../img/icons/home.png" alt="Home">
             <p>Home</p>
         </a>
-        <a href="./projects.html">
+        <a href="./projects.html" class="active">
             <img src="../img/icons/projects.png" alt="Projecten">
             <p>Projecten</p>
         </a>
@@ -109,21 +109,25 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="./project/hummer.html">
                 <div class="info">
-                    <h3>Naam</h3>
+                    <h3>Hummer</h3>
                     <div class="tags">
-                        <p>Svelte</p>
-                        <p>Design</p>
+                        <p>Frontend application</p>
+                        <p>Data</p>
+                        <p>d3</p>
+                        <p>Maps &amp; Graphs</p>
+                        <p>React</p>
                     </div>
                 </div>
             </a>
 
-            <a href="">
+            <a href="./project/portfolio.html">
                 <div class="info">
-                    <h3>Naam</h3>
+                    <h3>Portfolio</h3>
                     <div class="tags">
-                        <p>Svelte</p>
+                        <p>HTML & CSS</p>
+                        <p>Responsive</p>
                         <p>Design</p>
                     </div>
                 </div>
