compressed images and spell check

--- a/pages/project/portfolio.html
+++ b/pages/project/portfolio.html
@@ -59,7 +59,7 @@
             <h2>In het kort<span>| <a href="https://github.com/RickGroot/Portfolio" target="_blank">Code</a></span>
             </h2>
             <p>
-                Het was al te verwachten, maar deze portfolio website is natuurlijk ook door mij in elkaar gezet. Ik het
+                Het was al te verwachten, maar deze portfolio website is natuurlijk ook door mij in elkaar gezet. Ik heb het
                 bij plain HTML, CSS en JavaScript gehouden, omdat dit slechts een kleine site is. De HTML is semantisch
                 correct opgemaakt, de structuur is dus makkelijk en correct opgezet. Naast een mooie vormgeving is alles
                 ook helemaal responsive gemaakt. Verder valt er eigenlijk niet heel veel over te vertellen, bedankt voor
