--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 Nederland. Ik ben studerend
                 aan de opleiding <a href="https://www.cmd-amsterdam.nl/" target="_blank">Communication & Multimedia
                     Design (CMD)</a> op
-                de HvA. Een clean, responsive en toeghankelijk design staat bij mij centraal.
+                de HvA. Een clean, responsive en toegankelijk design staat bij mij centraal.
             </p>
             <h2>Skills & ervaringen</h2>
             <div class="skills">
