--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -52,8 +52,9 @@
     <main>
         <article>
             <h2>Naast al het programmeren</h2>
-            <P>Naast dat ik veel achter mijn laptop bezig met het maken van applicaties en websites doe ik ook nog
-                andere dingen in mijn vrije tijd. Zo speel ik trompet, en doe ik aan fotografie als hobby.</P>
+            <P>Naast dat ik veel achter mijn laptop bezig ben met het maken van applicaties en websites doe ik ook nog
+                andere dingen in mijn vrije tijd. Zo speel ik trompet, speel ik (vaak) games met wat vrienden, en doe ik
+                aan fotografie als hobby.</P>
         </article>
         <section>
             <div></div>
