--- a/pages/project/hummer.html
+++ b/pages/project/hummer.html
@@ -74,8 +74,8 @@
             <h2>React en d3</h2>
             <p>
                 Deze site is gemaakt door middel van React en d3. De pagina is opgesplitst in verschillende componenten,
-                die een geheel vormen in de browser. Door middel van d3 wordt er een map en barchart ingeladen. Daar
-                valt data op te zijn vanuit alle parkeergarages in Nederland, deze data komt uit een <a
+                die een geheel vormen in de browser. Door middel van d3 wordt er een map en barchart ingeladen, daar
+                staat data in van alle parkeergarages in Nederland. Deze data komt uit een <a
                     href="https://opendata.rdw.nl/browse?category=Parkeren&provenance=official" target="_blank">database
                     van RDW</a>. De app geeft door de visualisaties interessante inzichten over de verdeling en ligging
                 van de hoogte van parkeergarages.
