safari and big screen changes

--- a/pages/project/portfolio.html
+++ b/pages/project/portfolio.html
@@ -54,9 +54,9 @@
         <img src="../../img/profile2.jpg" alt="Projecten">
     </header>
 
-    <main>
+    <main class="short">
         <section>
-            <h2>In het kort<span>| <a href="https://github.com/RickGroot/Portfolio" target="_blank">Code</a></span>
+            <h2>In het kort<span>| <a href="https://github.com/RickGroot/rickgroot.github.io" target="_blank">Code</a></span>
             </h2>
             <p>
                 Het was al te verwachten, maar deze portfolio website is natuurlijk ook door mij in elkaar gezet. Ik heb het
