--- a/pages/projects.html
+++ b/pages/projects.html
@@ -62,7 +62,7 @@
         </section>
 
         <section class="projects">
-            <a href="./project/discord.html">
+            <a href="./project/discord.html" loading="lazy">
                 <div class="info">
                     <h3>Discord-Bot</h3>
                     <div class="tags">
@@ -74,7 +74,7 @@
                 </div>
             </a>
 
-            <a href="./project/icov.html">
+            <a href="./project/icov.html" loading="lazy">
                 <div class="info">
                     <h3>Redesign iCOV</h3>
                     <div class="tags">
@@ -85,7 +85,7 @@
                 </div>
             </a>
 
-            <a href="./project/menu.html">
+            <a href="./project/menu.html" loading="lazy">
                 <div class="info">
                     <h3>CSS Menu</h3>
                     <div class="tags">
@@ -97,7 +97,7 @@
                 </div>
             </a>
 
-            <a href="./project/pintreddit.html">
+            <a href="./project/pintreddit.html" loading="lazy">
                 <div class="info">
                     <h3>Pintreddit</h3>
                     <div class="tags">
@@ -109,7 +109,7 @@
                 </div>
             </a>
 
-            <a href="./project/hummer.html">
+            <a href="./project/hummer.html" loading="lazy">
                 <div class="info">
                     <h3>Hummer</h3>
                     <div class="tags">
@@ -122,7 +122,7 @@
                 </div>
             </a>
 
-            <a href="./project/portfolio.html">
+            <a href="./project/portfolio.html" loading="lazy">
                 <div class="info">
                     <h3>Portfolio</h3>
                     <div class="tags">
