small navigation fix

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <h2>Code</h2>
             <p>Met een goede kennis van HTML, CSS en JavaScript streef ik naar een semantisch correct en toegankelijk
-                internet. Code die ik schrijf ik bedoeld voor iedereen en voor elk device toegankelijk. Naast veel
+                internet. Code die ik schrijf is bedoeld voor elk device, en is voor iedereen toegankelijk. Naast veel
                 Front-End kennis heb ik ook verstand van de rest van het ontwerpproces, en heb ik ook oog voor detail.
                 Daarnaast kan ik goed over vormgeving meedenken en verbeteringen bij een design inbrengen.</p>
         </section>
