--- a/pages/project/pintreddit.html
+++ b/pages/project/pintreddit.html
@@ -64,17 +64,33 @@
                 Pintreddit is een applicatie die is ontwikkeld om mensen inspiratie te geven. De app geeft je random
                 afbeeldingen om zo te zorgen voor inspiratie, een beetje zoals Pinterest, maar dan volkomen random. De
                 gebruiker heeft keuze uit een aantal categorieën, en kan een minimum aantal upvotes aangeven. Deze
-                applicatie is een mix van Pinterest en Reddit, omdat alle data via de <a href="https://www.reddit.com/dev/api/" target="_blank">Reddit API</a> wordt opgehaald.
+                applicatie is een mix van Pinterest en Reddit, omdat alle data via de <a
+                    href="https://www.reddit.com/dev/api/" target="_blank">Reddit API</a> wordt opgehaald.
                 Vandaar de creatieve naam Pintreddit.
             </p>
         </section>
         <section>
             <h2>Reddit API</h2>
             <p>
-                Alle afbeeldingen worden opgehaald via de <a href="https://www.reddit.com/dev/api/" target="_blank">Reddit API</a>. De applicatie stuurt een HTTP request naar de API,
+                Alle afbeeldingen worden opgehaald via de <a href="https://www.reddit.com/dev/api/"
+                    target="_blank">Reddit API</a>. De applicatie stuurt een HTTP request naar de API,
                 die vervolgens een hele lading data terugstuurd van een random opgevraagde afbeelding. Deze data wordt
                 aangepast en gemanipuleerd, op basis van user inputs en media types, en vervolgens in de HTML gerenderd
                 voor de gebruiker.
+            </p>
+        </section>
+        <section>
+            <h2>Progressive web app<span>| <a href="https://github.com/RickGroot/progressive-web-apps-2021"
+                target="_blank">Code</a> | <a href="https://rick-groot-pwa.herokuapp.com/category/nature"
+                target="_blank">Live</a></span></h2>
+            <p>
+                Dit project is oorspronkelijk opgezet zonder nodeJS en andere packages etc. Maar er is een een versie
+                van dit project die is omgezet in een progressive web app. Deze variant maakt gebruik van Node, Express,
+                Gulp en nog meer andere packages, en bevat een service-worker en manifest file. Door trage API responses
+                is de performance van deze variant niet optimaal, maar de <a
+                    href="https://github.com/RickGroot/progressive-web-apps-2021" target="_blank">code is hier</a> te
+                vinden, Bekijk hier de <a href="https://rick-groot-pwa.herokuapp.com/category/nature"
+                    target="_blank">live versie</a> van deze variant.
             </p>
         </section>
         <section class="images">
