--- a/pages/projects.html
+++ b/pages/projects.html
@@ -74,13 +74,14 @@
                 </div>
             </a>
 
-            <a href="./project/icov.html">
+            <a href="./project/knmi.html">
                 <div class="info">
-                    <h3>Redesign iCOV</h3>
+                    <h3>KNMI</h3>
                     <div class="tags">
-                        <p>Design</p>
-                        <p>Prototype</p>
-                        <p>Website</p>
+                        <p>Svelte</p>
+                        <p>Data visualisation</p>
+                        <p>Front-end design</p>
+                        <p>UX</p>
                     </div>
                 </div>
             </a>
@@ -93,6 +94,17 @@
                         <p>Responsive</p>
                         <p>Styleguide</p>
                         <p>Print Style</p>
+                    </div>
+                </div>
+            </a>
+
+            <a href="./project/icov.html">
+                <div class="info">
+                    <h3>Redesign iCOV</h3>
+                    <div class="tags">
+                        <p>Design</p>
+                        <p>Prototype</p>
+                        <p>Website</p>
                     </div>
                 </div>
             </a>
