--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h2>Projecten</h2>
             <div class="projects">
 
-                <a href="./pages/project/discord.html">
+                <a href="./project/discord.html">
                     <div class="info">
                         <h3>Discord-Bot</h3>
                         <div class="tags">
@@ -97,19 +97,20 @@
                         </div>
                     </div>
                 </a>
-
-                <a href="./pages/project/icov.html">
+    
+                <a href="./project/knmi.html">
                     <div class="info">
-                        <h3>Redesign iCOV</h3>
+                        <h3>KNMI</h3>
                         <div class="tags">
-                            <p>Design</p>
-                            <p>Prototype</p>
-                            <p>Website</p>
+                            <p>Svelte</p>
+                            <p>Data visualisation</p>
+                            <p>Front-end design</p>
+                            <p>UX</p>
                         </div>
                     </div>
                 </a>
-
-                <a href="./pages/project/menu.html">
+    
+                <a href="./project/menu.html">
                     <div class="info">
                         <h3>CSS Menu</h3>
                         <div class="tags">
