--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h2>Projecten</h2>
             <div class="projects">
 
-                <a href="./project/discord.html">
+                <a href="./pages/project/discord.html">
                     <div class="info">
                         <h3>Discord-Bot</h3>
                         <div class="tags">
@@ -98,7 +98,7 @@
                     </div>
                 </a>
     
-                <a href="./project/knmi.html">
+                <a href="./pages/project/knmi.html">
                     <div class="info">
                         <h3>KNMI</h3>
                         <div class="tags">
@@ -110,7 +110,7 @@
                     </div>
                 </a>
     
-                <a href="./project/menu.html">
+                <a href="./pages/project/menu.html">
                     <div class="info">
                         <h3>CSS Menu</h3>
                         <div class="tags">
