--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
                     <p>Svelte</p>
                     <p>API data</p>
                     <p>NodeJS</p>
-                    <p>Interacion</p>
+                    <p>Express</p>
+                    <p>Interaction</p>
                     <p>JS libraries</p>
+                    <p>Progressive Web Apps</p>
+                    <p>Semantic</p>
                 </div>
             </div>
             <h2>Code</h2>
