--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <section>
             <h2>Projecten</h2>
-            <div class="projects">
+            <div class="projects homegrid">
 
                 <a href="./pages/project/discord.html">
                     <div class="info">
@@ -125,6 +125,29 @@
                         </div>
                     </div>
                 </a>
+
+                <a href="./project/icov.html">
+                    <div class="info">
+                        <h3>Redesign iCOV</h3>
+                        <div class="tags">
+                            <p>Design</p>
+                            <p>Prototype</p>
+                            <p>Website</p>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- <a href="./project/pintreddit.html">
+                    <div class="info">
+                        <h3>Pintreddit</h3>
+                        <div class="tags">
+                            <p>JavaScript</p>
+                            <p>API Data</p>
+                            <p>Web Application</p>
+                            <p>JSON</p>
+                        </div>
+                    </div>
+                </a> -->
 
             </div>
 
