new grid layout for projects

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <section>
             <h2>Projecten</h2>
-            <div class="projects homegrid">
+            <div class="projects">
 
                 <a href="./pages/project/discord.html">
                     <div class="info">
