small text update

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                     <p>Semantic</p>
                 </div>
             </div>
-            <h2>Code</h2>
+            <h2>T-shaped dev</h2>
             <p>Met een goede kennis van HTML, CSS en JavaScript streef ik naar een semantisch correct en toegankelijk
                 internet. Code die ik schrijf is bedoeld voor elk device, en is voor iedereen toegankelijk. Naast veel
-                Front-End kennis heb ik ook verstand van de rest van het ontwerpproces, en heb ik ook oog voor detail.
-                Daarnaast kan ik goed over vormgeving meedenken en verbeteringen bij een design inbrengen.</p>
+                Front-End kennis heb ik ook verstand van UX en interactie. Daarnaast kan ik goed over vormgeving
+                meedenken en verbeteringen bij een design inbrengen.</p>
         </section>
 
         <section>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </a>
-    
+
                 <a href="./pages/project/knmi.html">
                     <div class="info">
                         <h3>KNMI</h3>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </a>
-    
+
                 <a href="./pages/project/menu.html">
                     <div class="info">
                         <h3>CSS Menu</h3>
